@@ -1,6 +1,8 @@
 Changes made from the "0.5" release to the "0.6" release:
 -----------------------------------------------------------
 
+- Removed glPush/PopClientAttrib() and use glIsEnabled() instead since that is
+  much faster.
 - Vertex arrays are now used to render characters in GLC_TRIANGLE mode.
 - QuesoGLC now uses GLEW, the OpenGL Extension Wrangler, to manage OpenGL
   extensions.
